# slo-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.api.bak  Jenkinsfile  LICENSE  Makefile  README.md  cloudbuild.yaml  config.yaml  error-budget.yaml  flake.nix  hatch.toml  main.py  mypy.ini  pyproject.toml  results.txt  setup.cfg  setup.py  shell.nix  slo.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml
.github/workflows/: build-and-push-to-gcr.yml  build-and-push-to-ghcr.yml  build.yml  ci.yml  cloudbuild.yml  deploy.yml  local.yml  make-master.yml  rc-release.yml  release-please.yml  release.yml  scorecard.yml  test.yml
custom/: custom_exporter.py  helm-values.yaml
docs/: datadog.md
docs/deploy/: cloudbuild.md  cloudfunctions.md  cloudrun.md  datastudio_slo_report.md  kubernetes.md  lookerstudio_slo_report.md
docs/pratices/: latency_slo_distrib_metric_cloud_monitoring.md
docs/providers/: bigquery.md  cloud_monitoring.md  cloud_service_monitoring.md  cloudevent.md  custom.md  datadog.md  dynatrace.md  elasticsearch.md  opensearch.md  prometheus.md  prometheus_remote_write.md  pubsub.md  splunk.md  stackdriver.md  stackdriver_service_monitoring.md
docs/shared/: api.md  metrics.md  migration.md  troubleshooting.md
samples/: .env.sample  README.md  config.yaml  config_export.yaml  error_budget_policy.yaml  error_budget_policy_ssm.yaml
samples/cloud_monitoring/: slo_cloudrun_service_availability.yaml  slo_cloudrun_service_latency.yaml  slo_gae_app_availability.yaml  slo_gae_app_latency.yaml  slo_lb_request_availability.yaml  slo_lb_request_latency.yaml  slo_pubsub_subscription_throughput.yaml
samples/cloud_monitoring_mql/: slo_cloudrun_service_availability.yaml  slo_cloudrun_service_availability_ratio.yaml  slo_cloudrun_service_latency.yaml  slo_gae_app_availability.yaml  slo_gae_app_availability_ratio.yaml  slo_gae_app_latency.yaml  slo_lb_request_availability.yaml  slo_lb_request_availability_ratio.yaml  slo_lb_request_latency.yaml  slo_pubsub_subscription_throughput.yaml
samples/cloud_service_monitoring/: slo_gae_app_availability.yaml  slo_gae_app_availability_basic.yaml  slo_gae_app_latency.yaml  slo_gae_app_latency_basic.yaml  slo_gke_app_availability_basic.yaml  slo_gke_app_availability_basic_deprecated.yaml  slo_gke_app_latency_basic.yaml  slo_gke_app_latency_basic_deprecated.yaml  slo_lb_request_availability.yaml  slo_lb_request_latency.yaml
samples/cloudmonitoring/: slo_gae_app_availability.yaml
samples/cloudservicemonitoring/: slo_gae_app_latency_basic.yaml
samples/custom/: custom_backend.py  custom_exporter.py  custom_stackdriver.py  slo_custom_app_availability_query_sli.yaml  slo_custom_app_availability_ratio copy.yaml  slo_custom_app_availability_ratio.yaml  slo_gae_app_latency.yaml
samples/datadog/: slo_dd_app_availability_query_sli.yaml  slo_dd_app_availability_query_slo.yaml  slo_dd_app_availability_query_slo_metric.yaml  slo_dd_app_availability_query_slo_monitor.yaml  slo_dd_app_availability_ratio.yaml  slo_dd_app_latency_cut.yaml  slo_dd_disk_utilization_ratio.yaml  slo_dd_disk_utilization_sli.yaml  slo_dd_disk_utilization_slo.yaml
samples/dynatrace/: slo_dt_app_availability_ratio.yaml  slo_dt_app_availability_slo.yaml  slo_dt_app_latency_threshold.yaml  slo_dt_metrics_availability_ratio.yaml  slo_test.yaml
samples/elasticsearch/: slo_elk_test_ratio.yaml
samples/opensearch/: slo_opensearch_availability_sli.yaml  slo_opensearch_latency_sli.yaml
samples/prometheus/: slo_prom_metrics_availability_query_sli.yaml  slo_prom_metrics_availability_ratio.yaml  slo_prom_metrics_latency_distribution_cut.yaml  slo_prom_metrics_latency_query_sli.yaml
samples/splunk/: slo_splunk_app_availability_query_sli.yaml  slo_splunk_app_availability_ratio.yaml  slo_splunk_app_availability_ratio2.yaml
samples/stackdriver/: slo_gae_app_latency.yaml  slo_lb_request_availability.yaml  slo_lb_request_latency.yaml  slo_pubsub_subscription_throughput.yaml
samples/stackdriver_service_monitoring/: slo_gae_app_availability.yaml  slo_gae_app_latency.yaml  slo_gke_app_availability_basic_deprecated.yaml  slo_gke_app_latency_basic.yaml  slo_gke_app_latency_basic_deprecated.yaml  slo_lb_request_latency.yaml  zzz_slo_pubsub_subscription_throughput.yaml
samples/test/: config.yaml  config_export.yaml  test1.yaml  test2.yaml
scripts/: run_local_otel_collector.sh  traces.yaml
slo_generator/: api.py  api.py.bak  cli.py  compute.py  constants.py  report.py  utils.py
slo_generator/api/: main.py  requirements.txt
slo_generator/backends/: api.py  cloud_monitoring.py  cloud_monitoring_abc.py  cloud_monitoring_mql.py  cloud_service_monitoring.py  datadog.py  dynatrace.py  elastic.py  elasticsearch.py  graphite.py  open_search.py  opensearch.py  prometheus.py  prtg.py  splunk.py  stackdriver.py  stackdriver_service_monitoring.py  zabbix.py
slo_generator/exporters/: base.py  bigquery.py  cloud_monitoring.py  cloud_monitoring_specific.py  cloud_monitoring_tags.py  cloudevent.py  datadog.py  dynatrace.py  prometheus.py  prometheus_remote_write.proto  prometheus_remote_write.py  prometheus_remote_write_pb2.py  prometheus_remote_write_pb2.pyi  prometheus_self.py  pubsub.py  stackdriver.py
slo_generator/migrations/: migrator.py  v2.py
slos/: slo_catalog_gateway_availability.yaml  slo_catalog_gateway_latency_1.yaml  slo_config.yaml  slo_latency.yaml  slo_productsearch_search_by_id_availability.yaml  slo_productsearch_search_by_id_latency.yaml  slo_productsearch_search_by_image_availability.yaml  slo_productsearch_search_by_image_latency.yaml
src/slo_generator/: cli.py  report.py  utils.py
src/slo_generator/backends/: cloud_monitoring.py  cloud_monitoring_mql.py  dynatrace.py  elasticsearch.py  open_search.py  prometheus.py
tests/features/: api.feature
tests/step_defs/: test_api.py
tests/unit/: __init__.py  test_cli.py  test_compute.py  test_migrate.py  test_report.py  test_stubs.py  test_utils.py
(+40 files in other folders)
