[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slo-generator"
dynamic = ["version"]
description = "SLO Generator"
readme = "README.md"
license = "Apache License 2.0"
requires-python = ">=3.7, <4"
authors = [
    { name = "Google Inc.", email = "olivier.cervello@gmail.com" },
]
keywords = [
    "gcp",
    "generator",
    "sli",
    "slo",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "certifi >=2023.07.22",
    "click",
    "python-dateutil",
    "pyyaml",
    "ruamel.yaml",
    "setuptools >=65.5.1",
]

[project.optional-dependencies]
api = [
    "cloudevents",
    "Flask",
    "functions-framework",
    "gunicorn",
    "requests",
]
bigquery = [
    "google-api-python-client",
    "google-cloud-bigquery",
]
cloud_monitoring = [
    "google-api-python-client",
    "google-cloud-monitoring",
]
cloud_service_monitoring = [
    "google-api-python-client",
    "google-cloud-monitoring",
]
cloud_storage = [
    "google-api-python-client",
    "google-cloud-storage",
]
cloudevent = [
    "cloudevents",
]
datadog = [
    "datadog",
    "retrying==1.3.4",
]
dev = [
    "bandit",
    "black >=24.3.0",
    "flake8",
    "GitPython >=3.1.35",
    "isort",
    "mock",
    "mypy",
    "pip >=23.3",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytype",
    "safety >=3",
    "types-mock",
    "types-protobuf",
    "types-python-dateutil",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "wheel",
]
dynatrace = [
    "requests",
]
elasticsearch = [
    "elasticsearch",
]
opensearch = [
    "opensearch-py",
]
prometheus = [
    "prometheus-client",
    "prometheus-http-client",
]
pubsub = [
    "google-api-python-client",
    "google-cloud-pubsub",
]
splunk = [
    "splunk-sdk",
]

[project.scripts]
slo-generator = "slo_generator.cli:main"

[project.urls]
Homepage = "https://github.com/google/slo-generator"

[tool.hatch.version]
path = "slo_generator/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/slo_generator",
]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
ignore_missing_imports = true

[tool.pytype]
inputs = ['slo_generator']

[tool.ruff.lint]
# https://docs.astral.sh/ruff/linter/#rule-selection
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
