# -*- coding: utf-8 -*-
#
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = slo-generator
version = 2.6.0
author = Google Inc.
author_email = olivier.cervello@gmail.com
maintainer = Laurent VAYLET
maintainer_email = laurent.vaylet@gmail.com
url = https://github.com/google/slo-generator
description = SLO Generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    slo
    sli
    generator
    gcp
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Build Tools
    Topic :: System :: Monitoring

[options]
packages = find:
python_requires = >=3.8, <4
install_requires =
    pyyaml
    ruamel.yaml
    python-dateutil
    click
    setuptools >=65.5.1   # https://pyup.io/v/52495/f17 (reported by `safety check`)
    certifi >=2023.07.22  # avoid CVE-2023-37920 (reported by `safety check`)

[options.packages.find]
exclude =
    contrib
    docs
    tests

[options.extras_require]
api =
    Flask
    gunicorn
    cloudevents
    functions-framework
    requests
prometheus =
    prometheus-client
    prometheus-http-client
datadog =
    datadog
    retrying==1.3.4
dynatrace =
    requests
bigquery =
    google-api-python-client
    google-cloud-bigquery
cloud_monitoring =
    google-api-python-client
    google-cloud-monitoring==2.24.0 # released on 2024-12-12, fixes https://github.com/google/slo-generator/issues/547
cloud_service_monitoring =
    google-api-python-client
    google-cloud-monitoring==2.24.0 # released on 2024-12-12, fixes https://github.com/google/slo-generator/issues/547
cloud_storage =
    google-api-python-client
    google-cloud-storage
elasticsearch =
    elasticsearch
opensearch =
    opensearch-py
splunk =
    splunk-sdk
pubsub =
    google-api-python-client
    google-cloud-pubsub
cloudevent =
    cloudevents
dev =
    bandit
    GitPython >=3.1.35  # avoid CVE-2023-41040, CVE-2023-40267 and CVE-2023-40590 (reported by `safety check`)
    mock
    mypy
    pip >=23.3  # avoid known vulnerabilities in pip <23.3 (reported by `safety check`)
    pre-commit
    pytest
    pytest-cov
    pytype
    ruff
    safety
    types-mock
    types-protobuf
    types-python-dateutil
    types-PyYAML
    types-requests
    types-setuptools
    wheel

[options.entry_points]
console_scripts =
    slo-generator = slo_generator.cli:main

# Generated by synthtool. DO NOT EDIT!
[bdist_wheel]
universal = 1
